kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trustgraph
  labels:
    name: trustgraph
    environment: production
    project: digital-shramsetu
